# pAInt

./: .env.example  .gitignore  README.md  docker-compose.yml  prompt_examples.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
crud-api/: Dockerfile  requirements.txt
crud-api/app/auth/: models.py  routes.py  schemas.py  services.py
crud-api/app/core/: database.py  entities.py  models.py  repositories.py  security.py
crud-api/app/paints/: models.py  routes.py  schemas.py  services.py
database/: init_db.py
database/migrations/: 001_initial_schema.sql  002_add_session_uuid.sql
database/seeds/: 002_seed_data.sql
libs/ai-service/: .env.example  Dockerfile  config.py  pyproject.toml
libs/ai-service/agents/: paint_product_enrichment_agent.py  paint_recommendation_agent.py
libs/ai-service/rag/: vector_store_pg.py
libs/ai_service/: Dockerfile  pyproject.toml  pytest.ini  run_tests.sh
libs/ai_service/app/: main.py
libs/ai_service/app/agents/: intent_router.py  paint_product_enrichment_agent.py  paint_recommendation_agent.py
libs/ai_service/app/api/: __init__.py  dependencies.py  middleware.py
libs/ai_service/app/api/models/: __init__.py  requests.py  responses.py
libs/ai_service/app/api/routes/: __init__.py  admin.py  health.py  recommendations.py  search.py
libs/ai_service/app/auth/: __init__.py  dependencies.py
libs/ai_service/app/config/: config.py
libs/ai_service/app/rag/: vector_store_pg.py
libs/ai_service/app/services/: __init__.py  conversation_manager.py  inpainting_service.py
libs/ai_service/tests/: conftest.py
libs/ai_service/tests/unit/: coverage.md  test_auth_dependencies.py  test_conversation_manager.py  test_main_endpoints.py  test_paint_recommendation_agent.py  test_vector_store.py
libs/api/: Dockerfile  package-lock.json  package.json  pyproject.toml  requirements.txt
libs/api/app/: main.py
libs/api/app/auth/: routes.py  schemas.py
libs/api/app/core/: entities.py  repositories.py  repositories_interfaces.py  security.py
libs/api/app/paints/: routes.py
libs/crud-api/: Dockerfile  pyproject.toml
libs/crud-api/app/paints/: schemas.py
libs/shared/: __init__.py  database.py  models.py  pyproject.toml
postman/: README.md  pAInt_API_Collection.json  pAInt_Local_Environment.json
tests/: __init__.py  conftest.py  run_tests.sh  test_ai_main.py  test_ai_recommendations.py  test_ai_search.py  test_ai_status.py  test_api_auth.py  test_api_main.py  test_api_paints.py  test_models.py  test_repositories.py
