[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paint-project"
version = "0.1.0"
description = "pAInt - Intelligent Paint Catalog Assistant"
authors = [{name = "mrcndz"}]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["libs"]
include = ["*"]

[tool.pyright]
pythonPath = "python"
include = ["libs"]
extraPaths = ["libs"]

[project.scripts]
paint-crud = "crud_api.app.main:app"
paint-ai = "ai_service.main:app"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | \.env
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
